--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.alibaba.fastjson2:fastjson2:2.0.42'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
+    implementation 'com.alibaba:easyexcel:3.1.2'
 }
 
 test {
